--- a/src/WelcomeScreen.css
+++ b/src/WelcomeScreen.css
@@ -1,59 +1,76 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:500);
 .WelcomeScreen {
     position: fixed;
     width: 100%;
     height: 100%;
     top: 0;
-    background: white;
+    left: 0;
+    background-color: rgb(6, 84, 148);
     }
-    .login-button {
-    color: #494949;
-    text-transform: uppercase;
-    text-decoration: none;
-    background: #ffffff;
-    border: 4px solid #494949;
-    display: inline-block;
-    transition: all 0.4s ease 0s;
-    min-width: 10rem;
-    margin: 1rem;
-    }
-    .google-btn {
-    width: 184px;
-    height: 42px;
-    margin: 1rem;
+.google-btn {
+    position:relative;
+    width: 250px;
+    margin-top: 8%;
+    margin-left: 3%;
+    height: 60px;
     background-color: #4285f4;
     border-radius: 2px;
-    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
-    }
-    .google-btn:hover {
+}
+.google-btn:hover {
     box-shadow: 0 0 6px #4285f4;
     }
-    .google-btn:active {
+   
+.google-btn:active {
         background: #1669f2;
         }
-        .google-icon-wrapper {
-        position: absolute;
-        margin-top: 1px;
-        margin-left: 1px;
-        width: 40px;
-        height: 40px;
-        border-radius: 2px;
-        background-color: #fff;
-        }
+
+.google-icon-wrapper {
+    position:absolute;
+    margin-left:0px;
+    margin-top: 0px;
+    width: 60px;
+    height: 60px;
+    background-color: #fff;
+    justify-content: left;
+}
+    
         .google-icon {
-        position: absolute;
-        margin-top: 11px;
-        margin-left: -8px;
-        width: 18px;
-        height: 18px;
+      left:0;
+        margin-top: 15px;
+        width: 26px;
+        height: 26px;
         }
-        .btn-text {
-        float: right;
-        color: #fff;
-        font-size: 14px;
-        letter-spacing: 0.2px;
-        font-family: "Roboto";
-        background-color: #4285f4;
-        width: 80%;
-        height: 100%;
-        text-align: center;
-        }
+.btn-text {
+position:relative;
+margin-left: 25%;
+background:none;
+border:none;
+margin-top:7%;
+margin-bottom:2%;
+font-size:18px;
+color: white;
+text-align: left;
+font-family: 'Roboto', sans-serif;
+} 
+
+.privacy-link {
+    font-size:15px;
+    padding:2%;
+    margin-top: -1.5%;
+    margin-left: 3%;  
+}
+
+.welcome_message {
+    color:white;
+    font-size: 45px;
+    margin: 20%;
+    margin-top: 13%;
+    margin-bottom:0px;
+    font-family: 'Roboto', sans-serif;
+
+}
+
+.welcome-subtitle {
+    margin-top: 3%;
+    font-size: 40px !important;
+}
