--- a/src/EventList.css
+++ b/src/EventList.css
@@ -58,6 +58,7 @@ a {
     margin-bottom: 5%;
     border-radius: 2%;
     background-color: rgba(6, 81, 143, 0.719);
+    background-color: #1D4355;
     border: none;
     color: white;
     font-size: 14px;
