--- a/src/EventList.css
+++ b/src/EventList.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
 
 .EventList {
 display: inline-grid;
@@ -71,10 +72,12 @@ h2 {
     color: #1D4355;
     margin-bottom: 15%;
     margin-top: 20%;
+    font-family: 'Rubik', sans-serif;
 }
 
 h1 {
     font-size: 40px;
     color: rgba(6, 81, 143, 0.719);
     color: #1D4355;
+    font-family: 'Rubik', sans-serif;
 }
