--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 
 .App * {
   box-sizing: border-box;
-  max-width: 100%;
+  width: 100%;
 }
 
 ul {
@@ -59,7 +59,7 @@ input[type="number"] {
   font-size: 16px;
   color: #1D4355;
   font-family: 'Roboto', sans-serif;
-  margin-right:1%;
+  margin-right:2%;
 }
 
 
@@ -173,12 +173,11 @@ input[type="number"] {
   font-size:35px;
     color: rgba(6, 81, 143, 0.719);
     color: #1D4355;
-    margin-bottom: 15%;
+    margin-bottom: 5%;
     margin-top: 20%;
     font-family: 'Rubik', sans-serif;
 }
 .chart-title-wrapper {
-  margin-top: 35%;
   margin-bottom: -7%;
   font-size: 16px;
   color: #1D4355;
@@ -193,8 +192,8 @@ input[type="number"] {
 .page-title {
   font-size:45px;
   color: #1D4355;
-  margin-bottom:15%;
-  margin-top:5%;
+  margin-bottom:55%;
+  margin-top:15%;
 }
 
 .number-header {
@@ -205,7 +204,7 @@ input[type="number"] {
 }
 
 .chart-2 {
-  margin-top: -5%;
+  margin-top: -10%;
 }
 
 
