--- a/src/EventList.css
+++ b/src/EventList.css
@@ -18,7 +18,7 @@ min-height: 20em;
 min-width: 100%;
 border-style: none;
 border: 6px solid #1D4355;;
-border-radius: 5%;
+border-radius: 8px;
 }
 
 .details-view {
@@ -31,8 +31,8 @@ border-radius: 5%;
     text-align: left;
     padding: 3% 3%;
     margin: 5%;
-    margin-left:6%;
-    margin-right:6%;
+    margin-left:10%;
+    margin-right:10%;
 
 }
 
