--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 
 .App * {
   box-sizing: border-box;
-  width: 100%;
+  max-width: 100%;
 }
 
 ul {
@@ -178,7 +178,7 @@ input[type="number"] {
     font-family: 'Rubik', sans-serif;
 }
 .chart-title-wrapper {
-  margin-bottom: -7%;
+  margin-bottom: 2%;
   font-size: 16px;
   color: #1D4355;
   font-family: 'Roboto', sans-serif;
@@ -200,7 +200,7 @@ input[type="number"] {
   font-size:16px;
   color: #1D4355;
   font-family: 'Roboto', sans-serif;
-  margin-bottom:-4%;
+  
 }
 
 .chart-2 {
