--- a/src/WelcomeScreen.css
+++ b/src/WelcomeScreen.css
@@ -55,8 +55,8 @@ font-family: 'Roboto', sans-serif;
 
 .privacy-link {
     font-size:15px;
-    padding:2%;
-    margin-top: -1.5%;
+    padding: 2%;
+    padding-top:1%;
     margin-left: 4%;  
 }
 
