--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,29 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:500);
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+
 .App {
   text-align: center;
   padding: 2% 5%;
+  background-color: rgba(179, 238, 248, 0.13);
+  color: #1D4355;
 }
 
 .App * {
   box-sizing: border-box;
-  grid-row: 1fr 1fr;
-  grid-column: 1fr 4fr 1fr ;
   max-width: 100%;
 }
 
 ul {
-  padding: 0;
   list-style: none;
 }
 
-p {
-  margin: 5px 0;
-}
+
 
 .display-none {
   display: none;
 }
 .showSuggestions {
-  display: block;
+  display: inline-block;
 }
 
 input[type="text"],
@@ -32,16 +31,38 @@ input[type="number"] {
   padding: 8px 6px 8px 10px;
   border-radius: 4px;
   outline: none;
-  border: 1px solid #ccc;
-  font-size: 14px;
+  border: 3px solid #1D4355;;
+  font-size: 12px;
   line-height: 20px;
   align-self: center;
-  height: 38px;
-  min-width: 20rem;
-  max-width: 50rem;
-  margin-top: 2%;
-  margin-bottom: 2%;
+  height: 40px;
+  min-width: 20em;
+  max-width: 50em;
 }
+input[type="text"] {
+  margin-bottom:5%;
+}
+input[type="number"] {
+  max-width: 12em;
+  min-width: 5em;
+  margin-bottom:8%;
+}
+
+.citysearch-label {
+  margin-top: 20%;
+  font-size: 16px;
+  color: #1D4355;
+  font-family: 'Roboto', sans-serif;
+}
+
+.number-label {
+  font-size: 16px;
+  color: #1D4355;
+  font-family: 'Roboto', sans-serif;
+  margin-right:2%;
+}
+
+
 
 .city {
   width: 250px;
@@ -54,6 +75,8 @@ input[type="number"] {
   max-width: 300px;
   margin: auto;
   position: relative;
+  margin-top: 35%;
+
 }
 
 .suggestions {
@@ -65,6 +88,7 @@ input[type="number"] {
   top: 43px;
   font-size: 14px;
   box-shadow: 10px 10px 16px -12px rgba(0, 0, 0, 0.75);
+
 }
 
 .suggestions > li {
@@ -72,6 +96,8 @@ input[type="number"] {
   padding: 8px 6px 8px 10px;
   background-color: #eee;
   cursor: default;
+
+
 }
 
 .suggestions > li:last-child {
@@ -83,24 +109,6 @@ input[type="number"] {
   background-color: #bcdcdb;
 }
 
-.event {
-  padding: 10px 10px 35px;
-  margin-bottom: 10px;
-  text-align: left;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  position: relative;
-}
-
-.details-btn {
-  position: absolute;
-  right: 5px;
-  bottom: 5px;
-  padding: 5px 8px;
-  border-radius: 4px;
-  outline: none;
-  cursor: pointer;
-}
 
 .name {
   font-size: 18px;
@@ -122,8 +130,8 @@ input[type="number"] {
 }
 
 .numberOfEvents {
-  width: 200px;
-  margin: 20px auto;
+  max-width: 50em;
+  min-width: 20em;
   text-align: center;
 }
 
@@ -136,7 +144,6 @@ input[type="number"] {
 }
 
 .Alert {
-  position: fixed;
   top: 20px;
 }
 
@@ -147,62 +154,58 @@ input[type="number"] {
 }
 .data-vis-wrapper .recharts-responsive-container {
   min-width: 100%;
+  max-width: 100%;
   display: flex;
 }
 .recharts-surface {
-  overflow: visible;
+  overflow: scroll;
 }
 
-.login-button {
-  color: #494949;
-  text-transform: uppercase;
-  text-decoration: none;
-  background: #ffffff;
-  padding: 20px;
-  border: 4px solid #494949;
-  display: inline-block;
-  transition: all 0.4s ease 0s;
-  min-width: 10rem;
-  margin: 1rem;
+
+.events-city-header {
+  color: rgba(6, 81, 143, 0.719);
+  color: #1D4355;
+  margin-bottom: 2%;
+  font-family: 'Roboto', sans-serif;
 }
 
-.google-btn {
-  width: 184px;
-  height: 42px;
-  margin: 1rem;
-  background-color: #4285f4;
-  border-radius: 2px;
-  box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
+.chart-header {
+  font-size:35px;
+    color: rgba(6, 81, 143, 0.719);
+    color: #1D4355;
+    margin-bottom: 5%;
+    margin-top: 20%;
+    font-family: 'Rubik', sans-serif;
 }
-.google-btn:hover {
-  box-shadow: 0 0 6px #4285f4;
+.chart-title-wrapper {
+  margin-bottom: 2%;
+  font-size: 16px;
+  color: #1D4355;
+  font-family: 'Roboto', sans-serif;
 }
-.google-btn:active {
-  background: #1669f2;
+
+
+.see-suggestions-input {
+  margin-bottom:2%;
 }
-.google-icon-wrapper {
-  position: absolute;
-  margin-top: 1px;
-  margin-left: 1px;
-  width: 40px;
-  height: 40px;
-  border-radius: 2px;
-  background-color: #fff;
+
+.page-title {
+  font-size:45px;
+  color: #1D4355;
+  margin-bottom:55%;
+  margin-top:15%;
 }
-.google-icon {
-  position: absolute;
-  margin-top: 11px;
-  margin-left: -8px;
-  width: 18px;
-  height: 18px;
+
+.number-header {
+  font-size:16px;
+  color: #1D4355;
+  font-family: 'Roboto', sans-serif;
+  
 }
-.btn-text {
-  float: right;
-  margin: 11px 11px 0 0;
-  color: #fff;
-  font-size: 14px;
-  letter-spacing: 0.2px;
-  font-family: "Roboto";
+
+.chart-2 {
+  
+  padding-top: 5%;
 }
 
 
@@ -213,8 +216,11 @@ input[type="number"] {
   }
   .data-vis-wrapper .recharts-responsive-container {
     flex-basis: 50%;
-    max-width: 50%;
+    max-width: 100%;
     min-width: auto;
-    margin: 0 auto;
+   
   }
 }
+
+
+
