--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
 
+html {
+  box-sizing: border-box;
+  overflow-x:hidden;
+  width: 100%;
+  height:100%;
+  text-align: center;
+}
 .App {
   text-align: center;
   padding: 2% 5%;
   background-color: rgba(179, 238, 248, 0.13);
   color: #1D4355;
+  
 }
 
 .App * {
   box-sizing: border-box;
+  overflow: hidden;
   max-width: 100%;
+  align-content: center;
 }
 
 ul {
@@ -87,7 +97,7 @@ input[type="number"] {
   margin: 0;
   top: 43px;
   font-size: 14px;
-  box-shadow: 10px 10px 16px -12px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px 10px 16px 1px rgba(0, 0, 0, 0.75);
 
 }
 
