finalized styling before adding welcomeview again

--- a/src/EventList.css
+++ b/src/EventList.css
@@ -5,6 +5,7 @@
 display: inline-grid;
 align-items: center;
 justify-items: center;
+text-align: center;
 row-gap: 2em;
 grid-template-columns: 1fr;
 grid-template-rows: 1fr;
