--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mansalva&display=swap');
 
 html {
   box-sizing: border-box;
@@ -10,6 +11,7 @@ html {
 }
 .App {
   text-align: center;
+  align-items: center;
   padding: 2% 5%;
   background-color: rgba(179, 238, 248, 0.13);
   color: #1D4355;
@@ -85,7 +87,7 @@ input[type="number"] {
   max-width: 300px;
   margin: auto;
   position: relative;
-  margin-top: 35%;
+  margin-top: 25%;
 
 }
 
@@ -184,7 +186,7 @@ input[type="number"] {
     color: rgba(6, 81, 143, 0.719);
     color: #1D4355;
     margin-bottom: 5%;
-    margin-top: 20%;
+    margin-top: 10%;
     font-family: 'Rubik', sans-serif;
 }
 .chart-title-wrapper {
@@ -200,10 +202,18 @@ input[type="number"] {
 }
 
 .page-title {
-  font-size:45px;
+  font-size:60px;
   color: #1D4355;
-  margin-bottom:55%;
   margin-top:15%;
+}
+
+.page-subtitle {
+  font-size:30px;
+  color:rgb(32, 166, 243);
+  transform: rotate(-8deg);
+  font-family: 'Mansalva', cursive;
+  margin-bottom:45%;
+
 }
 
 .number-header {
